Add class to the image

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div ng-show="user">
-            <img src="{{user.profilePic}}"/>
+            <img src="{{user.profilePic}}" class="img-fluid img-thumbnail" alt="User profile"/>
             <h1>Welcome {{user.name}}</h1>
             <a href="#" ng-click="newPasswordMode = true" ng-hide="newPasswordMode">Change Password</a>
             <div ng-show="newPasswordMode">
